Fix stretch issue

--- a/css/app.css
+++ b/css/app.css
@@ -66,7 +66,6 @@ h1 .sub {
 }
 .iPhone-6 .carousel div img {
   width: 100%;
-  height: 100%;
 }
 
 /* From iTunes Connect */
